force-app/main/default/objects/Project_Name__c/fields/hasMilestone__c.field-meta.xml
<CustomField>
    <fullName>hasMilestone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hasMilestone</label>
    <type>Checkbox</type>
</CustomField>