force-app/main/default/objects/Project_Name__c/fields/Number_of_Bedroom__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Bedroom__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Additonal Number of Bedroom</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>