force-app/main/default/objects/Project_Name__c/fields/Number_of_Crockery_Unit__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Crockery_Unit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Additinal Number of Crockery Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>