force-app/main/default/objects/Project_Name__c/fields/Opportunity_Project__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup with opportunity</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>