force-app/main/default/objects/Project_Name__c/fields/View_Project__c.field-meta.xml
<CustomField>
    <fullName>View_Project__c</fullName>
    <formula>HYPERLINK(&quot;apex/HML_ProjectDetailViewPage?id=&quot;&amp;Id, &quot;Project Detail Link&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Project</label>
    <type>Text</type>
</CustomField>